fix footer on mobile

--- a/assets/scss/partials/_base.scss
+++ b/assets/scss/partials/_base.scss
@@ -240,6 +240,16 @@ table {
 	}
 }
 
+@media (max-width: 767px) {
+	.site-footer p {
+		text-align: center; 
+		small {
+		    display: block;
+		    margin-bottom: 1rem;
+		    margin-top: 2rem;
+		}
+	}
+}
 
 /* The Modal (background) */
 .modal {
